# notification_bot

./: .env.default  .gitignore  main.py  pyproject.toml
apps/users/src/: app.py
apps/users/src/modules/users/: __init__.py
apps/users/src/modules/users/queue/: constants.py  consumer.py  publisher.py
src/: main.py
src/core/bot/: __init__.py  base_bot.py  polling_bot.py  webhook_bot.py
src/core/bot/polling/: __init__.py  polling_bot.py
src/core/bot/webhooks/: __init__.py  webhooks_bot.py
src/core/storages/: __init__.py  bot_storage.py
src/core/storages/bot/: __init__.py  bot.py
src/handlers/commands/: __init__.py  router.py  start.py
src/routes/bot/commands/: __init__.py
src/routes/bot/commands/start/: start.py
src/routes/server/tg/: __init__.py  router.py
src/routes/server/tg/webhook/: webhook.py
src/settings/bot/: __init__.py  bot_settings.py
src/settings/server/: __init__.py  server_settings.py
